<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="always|withText"
        android:title="@string/ride_list_action_share"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="always|withText"
        android:title="@string/ride_list_action_edit"/>
    <item
        android:id="@+id/action_merge"
        android:icon="@drawable/ic_action_merge"
        android:showAsAction="ifRoom|withText"
        android:title="@string/ride_list_action_merge"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_delete"
        android:showAsAction="ifRoom|withText"
        android:title="@string/ride_list_action_delete"/>

</menu>