<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ride_detail_dateTime_section" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="@dimen/detail_content_marginTop" >

            <org.jraf.android.bikey.widget.LabelTextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:label="@string/ride_detail_dateTime_date_label"
                android:paddingRight="8dp"
                android:text="Mon April 12th 2014" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="@dimen/detail_content_marginTop" >

            <org.jraf.android.bikey.widget.LabelTextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/ride_detail_leftColumn_weight"
                android:label="@string/ride_detail_dateTime_start_label"
                android:paddingRight="8dp"
                android:text="9:14" />

            <org.jraf.android.bikey.widget.LabelTextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:label="@string/ride_detail_dateTime_finish_label"
                android:paddingRight="8dp"
                android:text="16:21" />
        </LinearLayout>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_title_marginTop"
            android:text="@string/ride_detail_distance_section" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="@dimen/detail_content_marginTop" >

            <org.jraf.android.bikey.widget.LabelTextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:label="@string/ride_detail_distance_total_label"
                android:paddingRight="8dp"
                android:text="12.3 km" />
        </LinearLayout>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_title_marginTop"
            android:text="@string/ride_detail_duration_section" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="@dimen/detail_content_marginTop" >

            <org.jraf.android.bikey.widget.LabelTextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/ride_detail_leftColumn_weight"
                android:label="@string/ride_detail_duration_moving_label"
                android:paddingRight="8dp"
                android:text="1:58:02" />

            <org.jraf.android.bikey.widget.LabelTextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:label="@string/ride_detail_duration_total_label"
                android:paddingRight="8dp"
                android:text="2:16:52" />
        </LinearLayout>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_title_marginTop"
            android:text="@string/ride_detail_speed_section" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="@dimen/detail_content_marginTop" >

            <org.jraf.android.bikey.widget.LabelTextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/ride_detail_leftColumn_weight"
                android:label="@string/ride_detail_speed_average_label"
                android:paddingRight="8dp"
                android:text="27 mph" />

            <org.jraf.android.bikey.widget.LabelTextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:label="@string/ride_detail_speed_max_label"
                android:paddingRight="8dp"
                android:text="38 mph" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>