<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.jraf.android.bikey.app.display.DisplayActivity" >

    <FrameLayout
        android:id="@+id/conFragments"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/imgGpsStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="8dp"
        android:src="@drawable/ic_gps" />

    <View
        android:id="@+id/vieFragmentCycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/conTabsA"
        android:layout_width="match_parent"
        android:layout_height="@dimen/display_tabs_width"
        android:layout_alignParentTop="true"
        android:background="@color/tab_bar_bg"
        android:divider="?android:attr/dividerHorizontal"
        android:dividerPadding="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:weightSum="3" >

        <CheckBox
            android:id="@+id/chkTabSpeed"
            style="@style/tab"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/display_tab_speed" />

        <CheckBox
            android:id="@+id/chkTabDuration"
            style="@style/tab"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/display_tab_duration" />

        <CheckBox
            android:id="@+id/chkTabDistance"
            style="@style/tab"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/display_tab_distance" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/conTabsB"
        android:layout_width="match_parent"
        android:layout_height="@dimen/display_tabs_width"
        android:layout_alignParentBottom="true"
        android:background="@color/tab_bar_bg"
        android:divider="?android:attr/dividerHorizontal"
        android:dividerPadding="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:weightSum="3" >

        <CheckBox
            android:id="@+id/chkHeartRate"
            style="@style/tab"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/display_tab_heartRate" />

        <CheckBox
            android:id="@+id/chkTabCompass"
            style="@style/tab"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/display_tab_compass" />

        <CheckBox
            android:id="@+id/chkTabCurrentTime"
            style="@style/tab"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/display_tab_currentTime" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtTitle"
        style="@style/tab"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:enabled="false"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <org.jraf.android.util.ui.checkable.CheckableRelativeLayout
        android:id="@+id/chkRecord"
        style="@style/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conTabsA"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/record_bg"
        android:clickable="true" >

        <TextView
            android:id="@+id/chkRecord_text"
            style="@style/tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/display_chkRecord_created"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </org.jraf.android.util.ui.checkable.CheckableRelativeLayout>

</RelativeLayout>